--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,5 @@
-
-
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Engine/Maps/Templates/OpenWorld.OpenWorld
+EditorStartupMap=/Game/MainLevel.MainLevel
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=False
@@ -10,7 +8,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld.OpenWorld
+GameDefaultMap=/Game/MainLevel.MainLevel
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Script/Engine.GameModeBase
 GlobalDefaultServerGameMode=None
@@ -45,13 +43,15 @@ AutoStreamingThreshold=0.000000
 SoundCueCookQualityIndex=-1
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
-TargetedHardwareClass=EHardwareClass::Mobile
-DefaultGraphicsPerformance=EGraphicsPreset::Scalable
+TargetedHardwareClass=Mobile
+AppliedTargetedHardwareClass=Mobile
+DefaultGraphicsPerformance=Scalable
+AppliedDefaultGraphicsPerformance=Scalable
 
 [/Script/Engine.RendererSettings]
 r.Mobile.ShadingPath=0
 r.Mobile.SupportGPUScene=False
-r.Mobile.AntiAliasing=1
+r.Mobile.AntiAliasing=3
 r.Mobile.FloatPrecisionMode=0
 r.Mobile.AllowDitheredLODTransition=False
 r.Mobile.VirtualTextures=False
@@ -139,9 +139,9 @@ r.GBufferFormat=1
 r.MorphTarget.Mode=True
 r.GPUCrashDebugging=False
 vr.InstancedStereo=False
-r.MobileHDR=True
-vr.MobileMultiView=False
-r.Mobile.UseHWsRGBEncoding=False
+r.MobileHDR=False
+vr.MobileMultiView=True
+r.Mobile.UseHWsRGBEncoding=True
 vr.RoundRobinOcclusion=False
 r.MeshStreaming=False
 r.HeterogeneousVolumes=True
@@ -164,12 +164,12 @@ r.SkinCache.CompileShaders=False
 r.SkinCache.SkipCompilingGPUSkinVF=False
 r.SkinCache.DefaultBehavior=1
 r.SkinCache.SceneMemoryLimitInMB=128.000000
-r.Mobile.EnableStaticAndCSMShadowReceivers=True
+r.Mobile.EnableStaticAndCSMShadowReceivers=False
 r.Mobile.EnableMovableLightCSMShaderCulling=True
 r.Mobile.Forward.EnableLocalLights=True
 r.Mobile.Forward.EnableClusteredReflections=False
 r.Mobile.EnableNoPrecomputedLightingCSMShader=False
-r.Mobile.AllowDistanceFieldShadows=True
+r.Mobile.AllowDistanceFieldShadows=False
 r.Mobile.AllowMovableDirectionalLights=True
 r.Mobile.EnableMovableSpotlightsShadow=False
 r.GPUSkin.Support16BitBoneIndex=False
@@ -216,4 +216,128 @@ bReportStats=False
 ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
+
+[/Script/AndroidRuntimeSettings.AndroidRuntimeSettings]
+PackageName=com.YourCompany.[PROJECT]
+StoreVersion=1
+StoreVersionOffsetArm64=0
+StoreVersionOffsetX8664=0
+ApplicationDisplayName=
+VersionDisplayName=1.0
+MinSDKVersion=32
+TargetSDKVersion=32
+InstallLocation=InternalOnly
+bEnableLint=False
+bPackageDataInsideApk=False
+bCreateAllPlatformsInstall=False
+bDisableVerifyOBBOnStartUp=False
+bForceSmallOBBFiles=False
+bAllowLargeOBBFiles=False
+bAllowPatchOBBFile=False
+bAllowOverflowOBBFiles=False
+bUseExternalFilesDir=False
+bPublicLogFiles=True
+Orientation=SensorLandscape
+MaxAspectRatio=2.100000
+bUseDisplayCutout=False
+bRestoreNotificationsOnReboot=False
+bFullScreen=True
+bEnableNewKeyboard=True
+DepthBufferPreference=Default
+bValidateTextureFormats=True
+bForceCompressNativeLibs=False
+bEnableAdvancedBinaryCompression=False
+bEnableBundle=False
+bEnableUniversalAPK=True
+bBundleABISplit=True
+bBundleLanguageSplit=True
+bBundleDensitySplit=True
+!ExtraManifestNodeTags=__ClearArray__
+!ExtraApplicationNodeTags=__ClearArray__
+ExtraApplicationSettings=
+!ExtraActivityNodeTags=__ClearArray__
+ExtraActivitySettings=
+!ExtraPermissions=__ClearArray__
+bAndroidVoiceEnabled=False
+bEnableMulticastSupport=False
++PackageForOculusMobile=Quest2
+bRemoveOSIG=False
+KeyStore=
+KeyAlias=
+KeyStorePassword=
+KeyPassword=
+bBuildForArm64=True
+bBuildForX8664=False
+bBuildForES31=False
+bSupportsVulkan=True
+bSupportsVulkanSM5=False
+DebugVulkanLayerDirectory=(Path="")
+!DebugVulkanDeviceLayers=__ClearArray__
+!DebugVulkanInstanceLayers=__ClearArray__
+bAndroidOpenGLSupportsBackbufferSampling=False
+bDetectVulkanByDefault=True
+bBuildWithHiddenSymbolVisibility=True
+bDisableStackProtector=False
+bDisableLibCppSharedDependencyValidation=False
+bSaveSymbols=False
+bStripShaderReflection=True
+bEnableGooglePlaySupport=False
+bUseGetAccounts=False
+GamesAppID=
+!AchievementMap=__ClearArray__
+!LeaderboardMap=__ClearArray__
+bEnableSnapshots=False
+bSupportAdMob=True
+AdMobAppID=
+TagForChildDirectedTreatment=TAG_FOR_CHILD_DIRECTED_TREATMENT_UNSPECIFIED
+TagForUnderAgeOfConsent=TAG_FOR_UNDER_AGE_OF_CONSENT_UNSPECIFIED
+MaxAdContentRating=MAX_AD_CONTENT_RATING_G
+AdMobAdUnitID=
+!AdMobAdUnitIDs=__ClearArray__
+GooglePlayLicenseKey=
+GCMClientSenderID=
+bShowLaunchImage=True
+bAllowIMU=False
+bAllowControllers=True
+bBlockAndroidKeysOnControllers=False
+bControllersBlockDeviceFeedback=False
+AndroidAudio=Default
+AudioSampleRate=44100
+AudioCallbackBufferFrameSize=1024
+AudioNumBuffersToEnqueue=4
+AudioMaxChannels=0
+AudioNumSourceWorkers=0
+SpatializationPlugin=
+SourceDataOverridePlugin=
+ReverbPlugin=
+OcclusionPlugin=
+CompressionOverrides=(bOverrideCompressionTimes=False,DurationThreshold=5.000000,MaxNumRandomBranches=0,SoundCueQualityIndex=0)
+CacheSizeKB=65536
+MaxChunkSizeOverrideKB=0
+bResampleForDevice=False
+SoundCueCookQualityIndex=-1
+MaxSampleRate=48000.000000
+HighSampleRate=32000.000000
+MedSampleRate=24000.000000
+LowSampleRate=12000.000000
+MinSampleRate=8000.000000
+CompressionQualityModifier=1.000000
+AutoStreamingThreshold=0.000000
+AndroidGraphicsDebugger=None
+MaliGraphicsDebuggerPath=(Path="")
+bEnableMaliPerfCounters=False
+bMultiTargetFormat_ETC2=True
+bMultiTargetFormat_DXT=True
+bMultiTargetFormat_ASTC=True
+TextureFormatPriority_ETC2=0.200000
+TextureFormatPriority_DXT=0.600000
+TextureFormatPriority_ASTC=0.900000
+SDKAPILevelOverride=
+NDKAPILevelOverride=
+BuildToolsOverride=
+bStreamLandscapeMeshLODs=False
+bEnableDomStorage=False
+
+[/Script/OculusXRHMD.OculusXRHMDRuntimeSettings]
+MetaXRJsonPath=(FilePath="../../../../../develop/meta/package/MetaXRSimulator/meta_openxr_simulator.json")
 
