--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -339,5 +339,5 @@ bStreamLandscapeMeshLODs=False
 bEnableDomStorage=False
 
 [/Script/OculusXRHMD.OculusXRHMDRuntimeSettings]
-MetaXRJsonPath=(FilePath="../../../../../develop/meta/package/MetaXRSimulator/meta_openxr_simulator.json")
+MetaXRJsonPath=(FilePath="../../../../../../Users/ant7a/Documents/Meta XR Simulator/package/MetaXRSimulator/meta_openxr_simulator.json")
 
