feat: added snap throw feat: general polish docs: updated credit feat: reorganized sounds

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -218,7 +218,7 @@ bUseManualIPAddress=False
 ManualIPAddress=
 
 [/Script/AndroidRuntimeSettings.AndroidRuntimeSettings]
-PackageName=com.YourCompany.[PROJECT]
+PackageName=com.wallashss.FofuxoVsAlien
 StoreVersion=1
 StoreVersionOffsetArm64=0
 StoreVersionOffsetX8664=0
