feat: added meta quest vr stuffs

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -222,7 +222,7 @@ PackageName=com.wallashss.FofuxoVsAlien
 StoreVersion=1
 StoreVersionOffsetArm64=0
 StoreVersionOffsetX8664=0
-ApplicationDisplayName=
+ApplicationDisplayName=FofuxoVsAlien
 VersionDisplayName=1.0
 MinSDKVersion=29
 TargetSDKVersion=29
