--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -224,8 +224,8 @@ StoreVersionOffsetArm64=0
 StoreVersionOffsetX8664=0
 ApplicationDisplayName=FofuxoVsAlien
 VersionDisplayName=1.0
-MinSDKVersion=29
-TargetSDKVersion=29
+MinSDKVersion=32
+TargetSDKVersion=32
 InstallLocation=InternalOnly
 bEnableLint=False
 bPackageDataInsideApk=False
@@ -235,11 +235,14 @@ bForceSmallOBBFiles=False
 bAllowLargeOBBFiles=False
 bAllowPatchOBBFile=False
 bAllowOverflowOBBFiles=False
+bDontBundleLibrariesInAPK=False
 bUseExternalFilesDir=False
 bPublicLogFiles=True
 Orientation=SensorLandscape
 MaxAspectRatio=2.100000
 bUseDisplayCutout=False
+bAllowResizing=False
+bSupportSizeChanges=False
 bRestoreNotificationsOnReboot=False
 bFullScreen=True
 bEnableNewKeyboard=True
@@ -252,15 +255,12 @@ bEnableUniversalAPK=True
 bBundleABISplit=True
 bBundleLanguageSplit=True
 bBundleDensitySplit=True
-!ExtraManifestNodeTags=__ClearArray__
-!ExtraApplicationNodeTags=__ClearArray__
-ExtraApplicationSettings=
-!ExtraActivityNodeTags=__ClearArray__
+ExtraApplicationSettings=<meta-data android:name="com.oculus.supportedDevices" android:value="quest|quest2|questpro|quest3" />
 ExtraActivitySettings=
-!ExtraPermissions=__ClearArray__
 bAndroidVoiceEnabled=False
+bRecordPermissionAtStartupEnabled=False
 bEnableMulticastSupport=False
-+PackageForOculusMobile=Quest2
+bPackageForMetaQuest=True
 bRemoveOSIG=False
 KeyStore=
 KeyAlias=
@@ -272,8 +272,6 @@ bBuildForES31=False
 bSupportsVulkan=True
 bSupportsVulkanSM5=False
 DebugVulkanLayerDirectory=(Path="")
-!DebugVulkanDeviceLayers=__ClearArray__
-!DebugVulkanInstanceLayers=__ClearArray__
 bAndroidOpenGLSupportsBackbufferSampling=False
 bDetectVulkanByDefault=True
 bBuildWithHiddenSymbolVisibility=True
@@ -282,18 +280,16 @@ bDisableLibCppSharedDependencyValidation=False
 bSaveSymbols=False
 bStripShaderReflection=True
 bEnableGooglePlaySupport=False
-bUseGetAccounts=False
+RequestCodeForPlayGamesActivities=80002
+PlayGamesClientId=
+bForceRefreshToken=False
 GamesAppID=
-!AchievementMap=__ClearArray__
-!LeaderboardMap=__ClearArray__
-bEnableSnapshots=False
 bSupportAdMob=True
 AdMobAppID=
 TagForChildDirectedTreatment=TAG_FOR_CHILD_DIRECTED_TREATMENT_UNSPECIFIED
 TagForUnderAgeOfConsent=TAG_FOR_UNDER_AGE_OF_CONSENT_UNSPECIFIED
 MaxAdContentRating=MAX_AD_CONTENT_RATING_G
 AdMobAdUnitID=
-!AdMobAdUnitIDs=__ClearArray__
 GooglePlayLicenseKey=
 GCMClientSenderID=
 bShowLaunchImage=True
@@ -340,4 +336,51 @@ bEnableDomStorage=False
 
 [/Script/OculusXRHMD.OculusXRHMDRuntimeSettings]
 MetaXRJsonPath=(FilePath="../../../../../develop/meta/package/MetaXRSimulator/meta_openxr_simulator.json")
+SystemSplashBackground=Black
+bAutoEnabled=False
+!SplashDescs=__ClearArray__
+XrApi=OVRPluginOpenXR
+ColorSpace=P3
+ControllerPoseAlignment=Default
+bSupportsDash=True
+bCompositesDepth=True
+bHQDistortion=False
+bSetActivePIEToPrimary=False
+bSetCVarPIEToPrimary=False
+bUpdateHeadPoseForInactivePlayer=False
+MPPoseRestoreType=Disabled
+bDynamicResolution=False
+PixelDensityMin=0.800000
+PixelDensityMax=1.200000
++SupportedDevices=Quest2
+SuggestedCpuPerfLevel=SustainedLow
+SuggestedGpuPerfLevel=SustainedHigh
+FoveatedRenderingMethod=FixedFoveatedRendering
+FoveatedRenderingLevel=Off
+bDynamicFoveatedRendering=True
+bSupportEyeTrackedFoveatedRendering=False
+bCompositeDepthMobile=False
+bFocusAware=True
+bLateLatching=False
+bRequiresSystemKeyboard=False
+HandTrackingSupport=ControllersOnly
+HandTrackingFrequency=LOW
+HandTrackingVersion=Default
+bInsightPassthroughEnabled=False
+bAnchorSupportEnabled=False
+bAnchorSharingEnabled=False
+bSceneSupportEnabled=False
+bBoundaryVisibilitySupportEnabled=False
+bDefaultBoundaryVisibilitySuppressed=False
+bBodyTrackingEnabled=False
+BodyTrackingFidelity=Low
+BodyTrackingJointSet=UpperBody
+bEyeTrackingEnabled=False
+bFaceTrackingEnabled=False
+FaceTrackingDataSource=()
+bDeploySoToDevice=False
+bIterativeCookOnTheFly=False
+bSupportExperimentalFeatures=False
+ProcessorFavor=FavorEqually
+bTileTurnOffEnabled=True
 
